fabrique-derive/tests/ui/invalid_primary_key_type.stderr
error: Unknown value: `invalid` at primary_key
 --> tests/ui/invalid_primary_key_type.rs:4:1
  |
4 | struct Anvil {
  | ^^^^^^
